Fixing an alignment issue with a movie title is longer than one line.

--- a/MovieBuff/www/css/style.css
+++ b/MovieBuff/www/css/style.css
@@ -23,7 +23,7 @@
 
 .poster h4 {
 	position: relative;
-	top: -50px;
+	top: -60px;
 	text-align: center;
 	color: white;
 	z-index: 2;
@@ -31,8 +31,8 @@
 
 .poster-gradient {
 	position: relative;
-	top: -140px;
-	height: 100px;
+	top: -217px;
+	height: 150px;
 	background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(40, 40, 40, 100));
 }
 
@@ -51,8 +51,6 @@
 
 #rating-widget {
 	position: absolute;
-	top: 330px;
-	left: 0;
 	z-index: 99;
 }
 
